--- a/Install_Hadoop2.7.3
+++ b/Install_Hadoop2.7.3
@@ -1,5 +1,7 @@
+#Install Hadoop with Pseudo-distributed
 #ENV:
 CentOS 7.0
+
 #Reference
 http://hadoop.apache.org/docs/stable/hadoop-project-dist/hadoop-common/SingleCluster.html
 
